# ds-agent-rules

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_zh-TW.md  action.yml  docs-build.sh  mkdocs.yml  new-project.sh  package.json  pip-prepare.sh  pyproject.toml  sync.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.md  new-recipe.md  new-snippet.md
.github/workflows/: ci.yml  docs.yml
base/: core.md  data-eng.md  ds-ml.md  llm-eng.md  research.md  software-eng.md
docs/: index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/recipes/: ai-agent-system.md  data-pipeline.md  index.md  rag-chatbot.md
docs/snippets/: index.md
examples/: sync-ai-rules.yml
presets/: agentic-ai.txt  cv-project.txt  data-platform.txt  distributed-llm.txt  edge-deploy.txt  full-stack-ai.txt  graph-ml-project.txt  jax-research.txt  labeling-project.txt  llm-project.txt  nlp-project.txt  recsys-project.txt  research-llm.txt  tabular-project.txt  ts-forecast.txt  vlm-project.txt
snippets/: agentic-ai.md  audio-speech.md  chinese-nlp.md  ctr-prediction.md  cv.md  data-labeling.md  distributed-training.md  edge-inference.md  evaluation-framework.md  graph-ml.md  jax.md  llm-finetuning.md  mlops.md  nlp-general.md  prompt-engineering.md  pytorch.md  rag.md  responsible-ai.md  streaming-ml.md  synthetic-data.md  tabular-ml.md  time-series.md  vlm.md
templates/: data-eng.txt  ds-ml.txt  llm-eng.txt  research.txt  software-eng.txt
tests/: sync.bats
(+2 files in other folders)
