[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-agent-rules"
version = "1.1.0"
description = "AI agent rules for Data Science, ML & AI Engineering — sync to Claude, Copilot, Codex, Gemini, Cursor, Windsurf"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
  {name = "Edward Huang"}
]
keywords = [
  "ai-rules", "copilot", "claude", "cursor", "windsurf",
  "codex", "gemini", "data-science", "machine-learning", "mlops"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Edwarddev0723/ds-agent-rules"
Documentation = "https://edwarddev0723.github.io/ds-agent-rules/"
Repository = "https://github.com/Edwarddev0723/ds-agent-rules"
Changelog = "https://github.com/Edwarddev0723/ds-agent-rules/blob/main/CHANGELOG.md"

[project.scripts]
ds-agent-rules = "ds_agent_rules.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ds_agent_rules = [
  "data/base/*.md",
  "data/snippets/*.md",
  "data/presets/*.txt",
  "data/templates/*.txt",
  "data/*.sh",
]
